2009-12-01  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add global-highlight-symbol-mode.
	: Update auto-complete to 0.3.0beta.

	* init-basic.el ([C-f4]): Bind C-f4 to 'kill-this-buffer.
	([f6]): Bind f6 to '(occur "TODO").
	([C-f6]): Bind C-f6 to '(brep "grep -irn 'TODO' .").

	* init-misc.el ([C-f7]): Bind C-f7 to 'smart-compile.

	* init-basic.el: (setq mouse-drag-copy-region nil).
	([f4]): Bind f4 && S-f4 to 'next-error && 'previous-error.
	([f5]): Bind f5 to 'gdb.
	([f7]): Bind f7 to 'compile.

2009-11-27  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add ascii.el.
	Add ifdef.el.

2009-11-26  Meteor Liu  <meteor1113@gmail.com>

	* lisp/recent-jump.el: Add.

2009-11-25  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Close global-hl-line-mode.

	* init-misc.el (highlight-symbol): Add highlight-symbol setting.

	* lisp/highlight-symbol.el: Add.

	* init-basic.el: Add (global-cwarn-mode 1).
	: Open global-hl-line-mode.

2009-11-18  Meteor Liu  <meteor1113@gmail.com>

	* .emacs: Added.

	* init-site.el: Move some setting from init-winnt.el to here.
	Add some dirs to semantic-system-include.

	* init-basic.el: Move some setting from init-winnt.el to here.
	Add some dirs to ffap-c-path.

	* init-winnt.el: Delete.(Merge to init-basic.el and init-site.el)

2009-11-11  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Modify some comment.

2009-11-10  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (require): Add cscope setting.

	* lisp/decompile.el: Removed.

	* lisp/gtags.el: Removed.

	* lisp/pymacs.el: Removed.

	* lisp/xcscope.el: Removed.

	* init-misc.el: Remove ropemacs setting.
	Remove gtags.
	Remove cscope setting.
	Modify rope setting.

	* init-basic.el: Remove eldoc-mode for python.

2009-11-09  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Remove semanticdb-default-save-directory setting.

2009-11-08  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add eim setting.

2009-11-06  Meteor Liu  <meteor1113@gmail.com>
